Add Logstash boot configuration.

--- a/logstash/clickstream.conf
+++ b/logstash/clickstream.conf
@@ -1,4 +1,4 @@
-input { 
+input {
   file {
     path => "/app/weblog.csv"
     start_position => "beginning"
@@ -6,12 +6,24 @@ input {
 }
 
 filter {
-  # Transformation goes here
+    csv {
+        columns => [
+          "Ip",
+          "Time",
+          "Url",
+          "Status"
+        ]
+        separator => ","
+        }
+    date {
+        match => ["Time", "[dd/MMM/yyyy:HH:mm:ss"]
+        target => "Time"
+    }
 }
 
 output {
-  # elasticsearch {
-  #   hosts => "elasticsearch"
-  # }
+   elasticsearch {
+     hosts => "elasticsearch"
+   }
   stdout { codec => rubydebug }
 }
